doc: complete rest of swagger implementation, change rankings response (#34)
